# untitled-tile-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  brainstorm.drawio
shaders/: 2Dmvp_vert.glsl  color.glsl  entity_atlas_f.glsl  fullscreenv.glsl  gridf.glsl  mvp_vert.glsl  perlin_bg_frag.glsl  region_frag.glsl  shad_frag.glsl  shad_vert.glsl  tex.glsl
src/: CoreDriver.cpp  CoreDriver.h  Driver.cpp  Driver.h  Renderer.cpp  Renderer.h  config.h  constants.h  main.cpp  render_pipeline_structs.h
src/data/: Animation.cpp  Animation.h  GenMesh.cpp  GenMesh.h  HumanoidMesh.cpp  HumanoidMesh.h  MeshAnimStack.cpp  MeshAnimStack.h  NewAnimation.cpp  NewAnimation.h  Region.cpp  Region.h  RotationEffort.cpp  RotationEffort.h  State.cpp  State.h  World.h  WorldSave.h  components.h  render_pipeline_structs.h  world_mouse.h
src/game/: Action.h  Actor.cpp  Actor.h  Components.h  Effort.cpp  Effort.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Event.cpp  Event.h  Events.h  Followers.cpp  Followers.h  LCamControl.cpp  LCamControl.h  Movement.cpp  Movement.h  Player.cpp  Player.h  Region.cpp  Region.h  Sprite.cpp  Sprite.h  State.cpp  State.h  System.cpp  System.h  Tiledefs.h  Tiles.cpp  Tiles.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h  WorldSave.cpp  WorldSave.h  components.h  oil.cpp  (+6 more)
src/rendering/: BufferRenderer.cpp  BufferRenderer.h  EntityRenderer.cpp  EntityRenderer.h  GenMeshRenderer.cpp  GenMeshRenderer.h  NWOcam.cpp  NWOcam.h  PostRenderer.cpp  PostRenderer.h  RegionRenderer.cpp  RegionRenderer.h  Renderer.cpp  ShadowRenderer.cpp  ShadowRenderer.h  WorldRenderer.cpp  WorldRenderer.h  frame_manager.cpp  frame_manager.h
src/tests/: ecs_test.h  unittest.cpp
src/util/: abstract_freelist_objpool.h  abstract_linear_objpool.cpp  abstract_linear_objpool.h  bump_alloc.h  c_abstract.h  debug_buf.h  math.cpp  math.h  misc.h
